# stremio-seed-poc

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  style.css  style_staging.css  style_web.css  styles.scss
.github/workflows/: main.yaml
.github/workflows_example/: main.yml
js/: fullscreen.js
less/App/: styles.less
less/common/Button/: styles.less
less/common/Checkbox/: styles.less
less/common/ColorInput/ColorPicker/: styles.less
less/common/MetaItem/: styles.less
less/common/MetaPreview/: styles.less
less/common/ModalDialog/: styles.less
less/common/Multiselect/: styles.less
less/common/NavBar/NavMenu/: styles.less
less/common/NavBar/NavTabButton/: styles.less
less/common/NavBar/NotificationsMenu/: styles.less
less/common/NavBar/NotificationsMenu/NotificationsList/: styles.less
less/common/NavBar/NotificationsMenu/NotificationsList/Notification/: styles.less
less/common/NavBar/SearchBar/: styles.less
less/common/PaginateInput/: styles.less
less/common/PlayIconCircleCentered/: styles.less
less/common/Popup/: styles.less
less/common/Slider/: styles.less
less/routes/Addons/AddonPrompt/: styles.less
less/routes/Board/: styles.less
less/routes/Detail/StreamsList/Stream/: styles.less
less/routes/Detail/StreamsList/StreamPlaceholder/: styles.less
less/routes/Detail/VideosList/SeasonsBar/: styles.less
less/routes/Discover/: styles.less
less/routes/Intro/ConsentCheckbox/: styles.less
less/routes/Player/ControlBar/: styles.less
less/routes/Player/ControlBar/SeekBar/: styles.less
less/routes/Player/ControlBar/VolumeSlider/: styles.less
less/routes/Search/: styles.less
less/routes/Settings/SectionsList/: styles.less
pkg/: README.md  package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm  package_bg_prod.wasm
scripts/: bundle.rs
src/: basic_layout.rs  env.rs  helper.rs  lib.rs  multi_select.rs  page.rs  route.rs  styles.rs
src/basic_layout/: horizontal_nav_bar.rs  menu.rs  vertical_nav_bar.rs
src/entity/: mod.rs  multi_select.rs
src/page/: addons.rs  blank.rs  board.rs  detail.rs  discover.rs  intro.rs  library.rs  not_found.rs  player.rs  search.rs  settings.rs  test_links.rs
src/page/addons/: add_addon_modal.rs  addon_details_modal.rs  catalog_selector.rs  modal.rs  type_selector.rs
src/page/discover/: catalog_selector.rs  extra_prop_selector.rs  type_selector.rs
src/page/player/: control_bar.rs  nav_bar.rs
src/page/player/control_bar/: info_button.rs  mute_button.rs  network_button.rs  play_button.rs  screencast_button.rs  seek_bar.rs  subtitles_button.rs  videos_button.rs  volume_slider.rs
src/page/settings/: label.rs  section.rs  side_menu.rs
src/page/settings/section/: control.rs  general.rs  player.rs  streaming_server.rs
src/page/settings/section/control/: button_label.rs  checkbox.rs  color_picker.rs  connect_button.rs  dropdown.rs  large_button.rs  link_label.rs  status.rs  url.rs  user_info.rs
src/styles/: global.rs  init.rs  themes.rs
src/styles/global/: font_faces.rs  routes_container.rs
