[package]
name = "stremio-example-seed"
version = "0.1.1"
authors = ["Ivo Georgiev <ivo@stremio.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
futures = { version = "0.3", features = [ "compat" ] }
serde_json = "1.0.41"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
enclose = "1.1.8"
itertools = "0.8.1"

# seed = { git = "https://github.com/seed-rs/seed", rev = "14afc43" }
#seed = { git = "ssh://git@github.com/MartinKavik/seed.git" }
seed = { path = "../seed" }

stremio-core = { git = "ssh://git@github.com/Stremio/stremio-core.git" }
#stremio-core = { path = "../stremio-core" }

stremio-derive = { git = "ssh://git@github.com/Stremio/stremio-core.git" }
#stremio-derive = { path = "../stremio-core/stremio-derive" }

env-web = { git = "ssh://git@github.com/Stremio/stremio-core.git" }
#env-web = { path = "../stremio-core/env-web" }

[dependencies.web-sys]
version = "0.3.30"
features = [
	'Window',
	'Request',
	'RequestInit',
	'Response',
	'Storage',
]


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
