[package]
name = "stremio-example-seed"
version = "0.1.1"
authors = ["Ivo Georgiev <ivo@stremio.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
futures = { version = "0.3", features = [ "compat" ] }
serde_json = "1.0.41"
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"
enclose = "1.1.8"
itertools = "0.8.1"
localsearch = { git = "ssh://git@github.com/MartinKavik/Localsearch.git", branch = "master" }
indexmap = "1.6.1"

seed = { git = "https://github.com/seed-rs/seed", branch = "master" }
# seed = { path = "../seed" }

seed_styles = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_styles", branch = "main" }
# seed_styles = { path = "d:/repos/styles_hooks/seed_styles" }

stremio-core = { git = "ssh://git@github.com/Stremio/stremio-core.git", branch = "development" }
# stremio-core = { path = "../stremio-core" }

stremio-derive = { git = "ssh://git@github.com/Stremio/stremio-core.git", branch = "development" }
# stremio-derive = { path = "../stremio-core/stremio-derive" }

# stremio-core-web = { path = "d:/repos/stremio-core-web" }
chrono = "0.4.19"
http = "0.2.1"

seed_hooks = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_hooks", branch = "main" }
# seed_hooks = { path = "d:/repos/styles_hooks/seed_hooks" }

[dependencies.web-sys]
version = "0.3.46"
features = [
	'Window',
	'Request',
	'RequestInit',
	'Response',
	'Storage',
]


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
